--- a/package.json
+++ b/package.json
@@ -32,8 +32,7 @@
     "rc": "~0.3.3",
     "sails": "~0.11.2",
     "sails-disk": "~0.10.0",
-    "sails-mongo": "^0.11.5",
-    "yuidocjs": "^0.9.0"
+    "sails-mongo": "^0.11.5"
   },
   "scripts": {
     "start": "node app.js",
