1. User authentication completed 2. Server token validation completed 3. Corrections applied on server in regards to point 2 4. Tranlastion mechanism for Greek added 5. Client controllers fixed to work with promises

--- a/package.json
+++ b/package.json
@@ -42,8 +42,8 @@
   "main": "app.js",
   "repository": {
     "type": "git",
-    "url": "git://github.com/pranav/app.git"
+    "url": "https://github.com/georgiachr/app-based-on-md"
   },
-  "author": "pranav",
-  "license": ""
+  "author": "Georgia Christodoulou",
+  "license": "NONE"
 }
